--- a/Seq2Seq-Seg.ipynb
+++ b/Seq2Seq-Seg.ipynb
@@ -76,12 +76,12 @@
     "video = videos[0][0]\n",
     "\n",
     "root = video\n",
-    "root\n"
+    "root"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,170 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
-       "\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "\n",
-       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
-       "\n",
-       "\n",
-       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
-       "\n",
-       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          ...,\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
-       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x,y = dataset[len(dataset)-1]\n",
     "y"
