--- a/Seq2Seq-Seg.ipynb
+++ b/Seq2Seq-Seg.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,9 +135,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
+       "\n",
+       "\n",
+       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
+       "\n",
+       "\n",
+       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
+       "\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "\n",
+       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
+       "\n",
+       "\n",
+       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]],\n",
+       "\n",
+       "\n",
+       "        [[[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]],\n",
+       "\n",
+       "         [[0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          ...,\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667],\n",
+       "          [0.6667, 0.6667, 0.6667,  ..., 0.6667, 0.6667, 0.6667]]]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x,y = dataset[len(dataset)-1]\n",
     "y"
